fix about component font, spacing in translations

--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -23,8 +23,8 @@
 .about-us {
     color: #000;
     font-size: 30px;
-    font-weight: bold;
-    font-family: 'Lato';
+    font-weight: lighter;
+    font-family: 'Georgia';
     text-align: left;
     text-decoration: underline;
     text-underline-position: under;
